--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
   },
   "homepage": "https://github.com/rtxjvmelo/ask-me#readme",
   "dependencies": {
+    "@sequelize/core": "^7.0.0-alpha.37",
+    "@sequelize/mariadb": "^7.0.0-alpha.41",
     "body-parser": "^1.20.2",
     "ejs": "^3.1.10",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "sequelize": "^6.37.3"
   }
 }
